[gd_scene load_steps=17 format=2]

[ext_resource path="res://models/floors/base_floor_tiles.tres" type="TileSet" id=1]
[ext_resource path="res://models/hazards/electrical_pit_hazard.tscn" type="PackedScene" id=2]
[ext_resource path="res://characters/enemies/spider_queen/spider_queen.tscn" type="PackedScene" id=3]
[ext_resource path="res://levels/mess_hall/mess_hall.gd" type="Script" id=4]
[ext_resource path="res://models/entrance/entrance.tscn" type="PackedScene" id=5]
[ext_resource path="res://models/obstacles/furniture/table.tscn" type="PackedScene" id=6]
[ext_resource path="res://models/obstacles/furniture/chair.tscn" type="PackedScene" id=7]
[ext_resource path="res://models/obstacles/furniture/stool.tscn" type="PackedScene" id=8]
[ext_resource path="res://models/obstacles/furniture/lockers/mess_hall_locker.tscn" type="PackedScene" id=9]
[ext_resource path="res://models/obstacles/decorations/coffee_cup.png" type="Texture" id=10]
[ext_resource path="res://models/interactable/interactable.tscn" type="PackedScene" id=11]
[ext_resource path="res://models/obstacles/furniture/lockers/mess_hall_locker.png" type="Texture" id=12]
[ext_resource path="res://models/interactable/suit_locker.tscn" type="PackedScene" id=13]
[ext_resource path="res://characters/player/suits/astronaut_chef.png" type="Texture" id=14]
[ext_resource path="res://models/obstacles/furniture/lockers/locker_chef.png" type="Texture" id=15]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( 48, 560, 26.0823, 241.316, 24, 208, 48, 208, 592, 304, 80, 592, -16, 528, -16, 240, 16, 528, 48, 176, 80, 176, 592, 224, 80, 144, 112, 144, 556, 175.218, 112, 112, 144, 112, 144, 80, 176, 80, 176, 48, 464, 48, 464, 80, 496, 80, 496, 112, 528, 112, 528, 144, 556, 144, 592, 208, 624, 208, 624, 224, 656, 304, 656, 336, 656, 472, 656, 528, 624, 528, 624, 560, 592, 560, 592, 592, 560, 592, 560, 624, 528, 624, 528, 656, 496, 656, 496, 688, 464, 688, 464, 720, 176, 720, 176, 688, 144, 688, 144, 656, 112, 656, 112, 624, 80, 624, 48, 592, 16, 560, 592, 176, 656, 408 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5 ), PoolIntArray( 6, 7, 1, 8 ), PoolIntArray( 3, 9, 10, 4 ), PoolIntArray( 11, 4, 10, 12, 13, 14 ), PoolIntArray( 13, 15, 16 ), PoolIntArray( 16, 17, 18 ), PoolIntArray( 18, 19, 20, 21 ), PoolIntArray( 16, 21, 22, 23, 13 ), PoolIntArray( 23, 24, 25, 13 ), PoolIntArray( 25, 26, 14 ), PoolIntArray( 27, 28, 29, 11 ), PoolIntArray( 4, 30, 31 ), PoolIntArray( 32, 33, 34 ), PoolIntArray( 34, 35, 36 ), PoolIntArray( 36, 37, 38 ), PoolIntArray( 38, 39, 40 ), PoolIntArray( 40, 41, 42 ), PoolIntArray( 42, 43, 44 ), PoolIntArray( 44, 45, 46, 47 ), PoolIntArray( 47, 48, 49, 4 ), PoolIntArray( 49, 50, 51, 4 ), PoolIntArray( 51, 52, 5, 4 ), PoolIntArray( 5, 53, 0 ), PoolIntArray( 0, 54, 8, 1 ), PoolIntArray( 14, 55, 27 ), PoolIntArray( 38, 4, 31, 56, 36 ), PoolIntArray( 14, 27, 11 ), PoolIntArray( 16, 18, 21 ), PoolIntArray( 13, 25, 14 ), PoolIntArray( 44, 47, 4, 42 ), PoolIntArray( 40, 42, 4 ), PoolIntArray( 38, 40, 4 ), PoolIntArray( 34, 36, 56, 32 ) ]
outlines = [ PoolVector2Array( 16, 528, -16, 528, -16, 240, 26.0823, 241.316, 24, 208, 48, 208, 48, 176, 80, 176, 80, 144, 112, 144, 112, 112, 144, 112, 144, 80, 176, 80, 176, 48, 464, 48, 464, 80, 496, 80, 496, 112, 528, 112, 528, 144, 556, 144, 556, 175.218, 592, 176, 592, 208, 624, 208, 624, 224, 592, 224, 592, 304, 656, 304, 656, 336, 656, 408, 656, 472, 656, 528, 624, 528, 624, 560, 592, 560, 592, 592, 560, 592, 560, 624, 528, 624, 528, 656, 496, 656, 496, 688, 464, 688, 464, 720, 176, 720, 176, 688, 144, 688, 144, 656, 112, 656, 112, 624, 80, 624, 80, 592, 48, 592, 48, 560, 16, 560 ) ]

[node name="MessHall" type="Node2D"]
script = ExtResource( 4 )

[node name="FloorTileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 65541, 0, 65536, 65542, 0, 65537, 65543, 0, 0, 65544, 0, 0, 65545, 0, 65536, 65546, 0, 65536, 65547, 0, 1, 65548, 0, 0, 65549, 0, 0, 65550, 0, 1, 131076, 0, 0, 131077, 0, 65536, 131078, 0, 1, 131079, 0, 0, 131080, 0, 65536, 131081, 0, 65536, 131082, 0, 0, 131083, 0, 65536, 131084, 0, 0, 131085, 0, 0, 131086, 0, 65537, 131087, 0, 65536, 196611, 0, 1, 196612, 0, 65537, 196613, 0, 65536, 196614, 0, 0, 196615, 0, 1, 196616, 0, 65537, 196617, 0, 1, 196618, 0, 65537, 196619, 0, 0, 196620, 0, 1, 196621, 0, 65537, 196622, 0, 1, 196623, 0, 0, 196624, 0, 65536, 262146, 0, 65537, 262147, 0, 0, 262148, 0, 1, 262149, 0, 65536, 262150, 0, 0, 262151, 0, 0, 262152, 0, 1, 262153, 0, 0, 262154, 0, 0, 262155, 0, 65536, 262156, 0, 0, 262157, 0, 65536, 262158, 0, 65537, 262159, 0, 65536, 262160, 0, 65537, 262161, 0, 0, 327681, 0, 1, 327682, 0, 1, 327683, 0, 0, 327684, 0, 0, 327685, 0, 1, 327686, 0, 1, 327687, 0, 65537, 327688, 0, 0, 327689, 0, 65537, 327690, 0, 0, 327691, 0, 1, 327692, 0, 0, 327693, 0, 1, 327694, 0, 0, 327695, 0, 65537, 327696, 0, 1, 327697, 0, 65536, 327698, 0, 65537, 393216, 0, 65536, 393217, 0, 1, 393218, 0, 1, 393219, 0, 65537, 393220, 0, 65537, 393221, 0, 65536, 393222, 0, 65537, 393223, 0, 0, 393224, 0, 1, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 1, 393230, 0, 65536, 393231, 0, 65537, 393232, 0, 65536, 393233, 0, 65537, 393234, 0, 1, 393235, 0, 1, 524287, 0, 1, 458752, 0, 65537, 458753, 0, 65537, 458754, 0, 0, 458755, 0, 0, 458756, 0, 1, 458757, 0, 1, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 65536, 458763, 0, 65537, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 65536, 458769, 0, 0, 458770, 0, 65537, 458771, 0, 0, 458772, 0, 0, 589823, 0, 65537, 524288, 0, 1, 524289, 0, 0, 524290, 0, 65537, 524291, 0, 1, 524292, 0, 0, 524293, 0, 1, 524294, 0, 65537, 524295, 0, 1, 524296, 0, 1, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 1, 524307, 0, 1, 524308, 0, 0, 655359, 0, 65537, 589824, 0, 1, 589825, 0, 1, 589826, 0, 0, 589827, 0, 65537, 589828, 0, 65537, 589829, 0, 1, 589830, 0, 0, 589831, 0, 1, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 65536, 589836, 0, 0, 589837, 0, 65536, 589838, 0, 1, 589839, 0, 65536, 589840, 0, 0, 589841, 0, 0, 589842, 0, 65536, 589843, 0, 65536, 589844, 0, 0, 720895, 0, 65537, 655360, 0, 65536, 655361, 0, 65537, 655362, 0, 0, 655363, 0, 0, 655364, 0, 1, 655365, 0, 1, 655366, 0, 1, 655367, 0, 0, 655368, 0, 0, 655369, 0, 1, 655370, 0, 65536, 655371, 0, 65537, 655372, 0, 65536, 655373, 0, 65536, 655374, 0, 1, 655375, 0, 65537, 655376, 0, 65536, 655377, 0, 65536, 655378, 0, 0, 655379, 0, 65536, 655380, 0, 0, 655381, 0, 0, 655382, 0, 1, 655383, 0, 0, 786431, 0, 65536, 720896, 0, 65537, 720897, 0, 0, 720898, 0, 0, 720899, 0, 65537, 720900, 0, 1, 720901, 0, 1, 720902, 0, 65537, 720903, 0, 1, 720904, 0, 65537, 720905, 0, 1, 720906, 0, 65537, 720907, 0, 65536, 720908, 0, 65536, 720909, 0, 1, 720910, 0, 65537, 720911, 0, 0, 720912, 0, 1, 720913, 0, 65537, 720914, 0, 1, 720915, 0, 65536, 720916, 0, 0, 720917, 0, 1, 720918, 0, 65536, 720919, 0, 65536, 851967, 0, 65536, 786432, 0, 0, 786433, 0, 1, 786434, 0, 0, 786435, 0, 65536, 786436, 0, 0, 786437, 0, 0, 786438, 0, 1, 786439, 0, 0, 786440, 0, 1, 786441, 0, 65536, 786442, 0, 65536, 786443, 0, 0, 786444, 0, 1, 786445, 0, 65537, 786446, 0, 65537, 786447, 0, 0, 786448, 0, 65537, 786449, 0, 0, 786450, 0, 65537, 786451, 0, 1, 786452, 0, 1, 786453, 0, 0, 786454, 0, 65536, 786455, 0, 1, 917503, 0, 65536, 851968, 0, 65536, 851969, 0, 65537, 851970, 0, 1, 851971, 0, 65536, 851972, 0, 65537, 851973, 0, 0, 851974, 0, 0, 851975, 0, 1, 851976, 0, 1, 851977, 0, 0, 851978, 0, 65537, 851979, 0, 0, 851980, 0, 1, 851981, 0, 1, 851982, 0, 65537, 851983, 0, 1, 851984, 0, 1, 851985, 0, 65536, 851986, 0, 65536, 851987, 0, 0, 851988, 0, 65536, 851989, 0, 0, 851990, 0, 65536, 851991, 0, 1, 983039, 0, 65537, 917504, 0, 0, 917505, 0, 65537, 917506, 0, 65537, 917507, 0, 1, 917508, 0, 0, 917509, 0, 0, 917510, 0, 65536, 917511, 0, 1, 917512, 0, 0, 917513, 0, 65537, 917514, 0, 65536, 917515, 0, 1, 917516, 0, 0, 917517, 0, 0, 917518, 0, 1, 917519, 0, 65537, 917520, 0, 1, 917521, 0, 65536, 917522, 0, 0, 917523, 0, 1, 917524, 0, 65536, 1048575, 0, 0, 983040, 0, 65537, 983041, 0, 1, 983042, 0, 65536, 983043, 0, 0, 983044, 0, 0, 983045, 0, 65536, 983046, 0, 1, 983047, 0, 1, 983048, 0, 65537, 983049, 0, 65536, 983050, 0, 0, 983051, 0, 0, 983052, 0, 65537, 983053, 0, 65537, 983054, 0, 0, 983055, 0, 65537, 983056, 0, 1, 983057, 0, 65536, 983058, 0, 1, 983059, 0, 65537, 983060, 0, 65537, 1114111, 0, 0, 1048576, 0, 1, 1048577, 0, 1, 1048578, 0, 65537, 1048579, 0, 0, 1048580, 0, 1, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 1, 1048585, 0, 0, 1048586, 0, 65536, 1048587, 0, 0, 1048588, 0, 1, 1048589, 0, 0, 1048590, 0, 1, 1048591, 0, 0, 1048592, 0, 0, 1048593, 0, 65537, 1048594, 0, 0, 1048595, 0, 0, 1048596, 0, 0, 1114112, 0, 65536, 1114113, 0, 0, 1114114, 0, 65537, 1114115, 0, 0, 1114116, 0, 0, 1114117, 0, 1, 1114118, 0, 1, 1114119, 0, 0, 1114120, 0, 0, 1114121, 0, 65537, 1114122, 0, 0, 1114123, 0, 65537, 1114124, 0, 0, 1114125, 0, 0, 1114126, 0, 1, 1114127, 0, 65536, 1114128, 0, 65536, 1114129, 0, 0, 1114130, 0, 0, 1114131, 0, 65537, 1179649, 0, 0, 1179650, 0, 65537, 1179651, 0, 1, 1179652, 0, 65537, 1179653, 0, 1, 1179654, 0, 0, 1179655, 0, 65537, 1179656, 0, 65536, 1179657, 0, 65537, 1179658, 0, 0, 1179659, 0, 65536, 1179660, 0, 1, 1179661, 0, 65537, 1179662, 0, 0, 1179663, 0, 65536, 1179664, 0, 1, 1179665, 0, 1, 1179666, 0, 0, 1245186, 0, 1, 1245187, 0, 65537, 1245188, 0, 1, 1245189, 0, 1, 1245190, 0, 1, 1245191, 0, 0, 1245192, 0, 1, 1245193, 0, 1, 1245194, 0, 65536, 1245195, 0, 65536, 1245196, 0, 65536, 1245197, 0, 65537, 1245198, 0, 0, 1245199, 0, 65537, 1245200, 0, 1, 1245201, 0, 65536, 1310723, 0, 1, 1310724, 0, 65537, 1310725, 0, 0, 1310726, 0, 1, 1310727, 0, 1, 1310728, 0, 0, 1310729, 0, 0, 1310730, 0, 1, 1310731, 0, 0, 1310732, 0, 65536, 1310733, 0, 65536, 1310734, 0, 1, 1310735, 0, 0, 1310736, 0, 1, 1376260, 0, 1, 1376261, 0, 65537, 1376262, 0, 0, 1376263, 0, 65537, 1376264, 0, 65536, 1376265, 0, 65537, 1376266, 0, 65537, 1376267, 0, 1, 1376268, 0, 1, 1376269, 0, 1, 1376270, 0, 65537, 1376271, 0, 65537, 1441797, 0, 0, 1441798, 0, 65536, 1441799, 0, 0, 1441800, 0, 0, 1441801, 0, 65537, 1441802, 0, 0, 1441803, 0, 0, 1441804, 0, 65536, 1441805, 0, 1, 1441806, 0, 65536 )

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="NavigationPolygon2D" type="NavigationPolygonInstance" parent="Navigation2D"]
navpoly = SubResource( 1 )

[node name="ElectricalPitHazard" parent="." instance=ExtResource( 2 )]
position = Vector2( 84, 404 )

[node name="ElectricalPitHazard2" parent="." instance=ExtResource( 2 )]
position = Vector2( 416, 532 )

[node name="ElectricalPitHazard3" parent="." instance=ExtResource( 2 )]
position = Vector2( 300, 640 )

[node name="Table" parent="." instance=ExtResource( 6 )]
position = Vector2( 448, 256 )
rotation = -0.261799

[node name="Chair" parent="." instance=ExtResource( 7 )]
position = Vector2( 400, 248 )
rotation = 0.575959

[node name="Chair2" parent="." instance=ExtResource( 7 )]
position = Vector2( 400, 376 )

[node name="Chair3" parent="." instance=ExtResource( 7 )]
position = Vector2( 400, 504 )
rotation = -1.309
flip_horizontal = true

[node name="Chair4" parent="." instance=ExtResource( 7 )]
position = Vector2( 176, 248 )

[node name="Chair5" parent="." instance=ExtResource( 7 )]
position = Vector2( 176, 376 )

[node name="Chair6" parent="." instance=ExtResource( 7 )]
position = Vector2( 168, 504 )
rotation = -0.261799

[node name="Chair7" parent="." instance=ExtResource( 7 )]
position = Vector2( 264, 504 )
rotation = -2.40506

[node name="Chair8" parent="." instance=ExtResource( 7 )]
position = Vector2( 256, 376 )
rotation = 1.28282
flip_horizontal = true

[node name="Chair9" parent="." instance=ExtResource( 7 )]
position = Vector2( 256, 240 )
flip_horizontal = true

[node name="Chair10" parent="." instance=ExtResource( 7 )]
position = Vector2( 496, 248 )
rotation = -0.785398
flip_horizontal = true

[node name="Chair11" parent="." instance=ExtResource( 7 )]
position = Vector2( 496, 376 )
rotation = 0.785398
flip_horizontal = true

[node name="Chair12" parent="." instance=ExtResource( 7 )]
position = Vector2( 496, 504 )
rotation = 1.5708
flip_horizontal = true

[node name="Table2" parent="." instance=ExtResource( 6 )]
position = Vector2( 208, 248 )
rotation = 0.523599

[node name="Table3" parent="." instance=ExtResource( 6 )]
position = Vector2( 216, 384 )

[node name="Table4" parent="." instance=ExtResource( 6 )]
position = Vector2( 216, 512 )
rotation = -0.610865

[node name="Table5" parent="." instance=ExtResource( 6 )]
position = Vector2( 448, 384 )

[node name="Table6" parent="." instance=ExtResource( 6 )]
position = Vector2( 448, 512 )

[node name="Table8" parent="." instance=ExtResource( 6 )]
position = Vector2( 56, 384 )
rotation = 0.785398

[node name="Table7" parent="." instance=ExtResource( 6 )]
position = Vector2( 320, 616 )
rotation = 1.13446

[node name="Coffee" type="Sprite" parent="."]
position = Vector2( 320, 616 )
rotation = 1.13446
texture = ExtResource( 10 )

[node name="Coffee2" type="Sprite" parent="."]
position = Vector2( 216, 488 )
rotation = 1.13446
texture = ExtResource( 10 )

[node name="Coffee3" type="Sprite" parent="."]
position = Vector2( 408, 416 )
rotation = 0.666716
texture = ExtResource( 10 )

[node name="Coffee4" type="Sprite" parent="."]
position = Vector2( 432, 248 )
rotation = -0.872665
texture = ExtResource( 10 )

[node name="Coffee5" type="Sprite" parent="."]
position = Vector2( 200, 368 )
rotation = -0.349066
texture = ExtResource( 10 )

[node name="Stool" parent="." instance=ExtResource( 8 )]
position = Vector2( 288, 632 )
rotation = 1.13446

[node name="Stool2" parent="." instance=ExtResource( 8 )]
position = Vector2( 376, 648 )
rotation = 0.523599

[node name="Stool3" parent="." instance=ExtResource( 8 )]
position = Vector2( 344, 600 )
rotation = 1.309

[node name="Stool4" parent="." instance=ExtResource( 8 )]
position = Vector2( 192, 528 )
rotation = 1.309

[node name="Stool5" parent="." instance=ExtResource( 8 )]
position = Vector2( 40, 400 )
rotation = 1.309

[node name="Stool6" parent="." instance=ExtResource( 8 )]
position = Vector2( 424, 272 )
rotation = 0.261799

[node name="Stool7" parent="." instance=ExtResource( 8 )]
position = Vector2( 472, 408 )
rotation = -0.610865

[node name="Chair13" parent="." instance=ExtResource( 7 )]
position = Vector2( 88, 360 )
rotation = -1.74533
flip_horizontal = true

[node name="SpiderQueen" parent="." instance=ExtResource( 3 )]
position = Vector2( 436, 136 )
speed = 160
nav_2d_path = NodePath("../Navigation2D")

[node name="SpiderQueen2" parent="." instance=ExtResource( 3 )]
position = Vector2( 176, 152 )
speed = 160
nav_2d_path = NodePath("../Navigation2D")

[node name="PlayerRespawn" type="Position2D" parent="."]
position = Vector2( 608, 384 )

[node name="Entrance" parent="." instance=ExtResource( 5 )]
position = Vector2( 752, 384 )
rotation = 4.71239

[node name="MessHallFridge" parent="." instance=ExtResource( 9 )]
position = Vector2( 232, 80 )

[node name="MessHallFridge2" parent="." instance=ExtResource( 9 )]
position = Vector2( 268, 80 )

[node name="MessHallFridge3" parent="." instance=ExtResource( 9 )]
position = Vector2( 304, 80 )

[node name="MessHallFridge4" parent="." instance=ExtResource( 9 )]
position = Vector2( 340, 80 )

[node name="MessHallFridge5" parent="." instance=ExtResource( 9 )]
position = Vector2( 376, 80 )

[node name="Interactable" parent="." instance=ExtResource( 11 )]
position = Vector2( 304, 80 )
sprite_texture = ExtResource( 12 )

[node name="SuitLocker" parent="." instance=ExtResource( 13 )]
position = Vector2( 624, 268 )
suit_texture = ExtResource( 14 )
locker_texture = ExtResource( 15 )
[connection signal="player_entered" from="Entrance" to="." method="_on_Entrance_player_entered"]
[connection signal="interaction_complete" from="Interactable" to="." method="_on_Interactable_interaction_complete"]
